# Two-Qubit-Transmon-Auto-Tuning

./: README.md  pyproject.toml
Images/Bayesian2/Meta-optimization (hyperparameter tuning)/: best_hyperparameters.txt
tests/: __init__.py
two_qubit_transmon_auto_tuning/: bayesian.py  bayesian_stage0.py  bayesian_stage1.py  delete.py  delete2.py  fidelity_function.py  qpt_simulation.py  single_transmon.py  tests.py  two_transmons.py
two_qubit_transmon_auto_tuning/stage0/: bayesian_stage0.py  objective_plotting.py  qpt_simulation.py
