[tool.poetry]
name = "two-qubit-transmon-auto-tuning"
version = "0.1.0"
description = ""
authors = ["Joel Pendleton <joelkieronpendleton@gmail.com>"]
readme = "README.md"
packages = [{include = "two_qubit_transmno_auto_tuning"}]

[tool.poetry.dependencies]
python = "^3.10"
qutip = "^4.7.3"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
